--- a/widgets/quadratic-sequences/quadratic-differences.html
+++ b/widgets/quadratic-sequences/quadratic-differences.html
@@ -26,9 +26,20 @@
       text-align: center;
       font-size: 0.95rem;
       color: #000000;
+      vertical-align: middle;
     }
     .difftable th { background: #f8f9fa; }
     .difftable td.muted { color: #888; background: #fcfcfc; }
+    /* Visual offset styling for difference rows */
+    .difftable td.offset-d1 { background: #fffef7; }
+    .difftable td.offset-d2 { background: #f7fffb; }
+    .difftable td.blank { background: #fcfcfc; color: #ccc; }
+    /* Interactivity */
+    .t-cell, .d1-cell, .d2-cell { cursor: pointer; }
+    .hl-t { background: #ffefd6 !important; box-shadow: inset 0 0 0 2px #F0B800; }
+    .hl-d1 { background: #e6f7ff !important; box-shadow: inset 0 0 0 2px #00A3FF; }
+    .hl-d2 { background: #e8ffe8 !important; box-shadow: inset 0 0 0 2px #00B800; }
+    .hl-selected { background: #fff1a8 !important; box-shadow: inset 0 0 0 3px #000000; }
     .summary { margin-top: 0.5rem; color: #000000; }
     .summary strong { color: #000000; }
 
