--- a/widgets/quadratic-sequences/quadratic-differences.html
+++ b/widgets/quadratic-sequences/quadratic-differences.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Quadratic Second-Difference Explorer</title>
+  <title>Quadratic Sequences Explorer</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -100,7 +100,7 @@
 <body>
   <div class="container">
     <a class="back-link" href="../../index.html">← Back to Home</a>
-    <h1>Quadratic Second‑Difference Explorer</h1>
+    <h1>Quadratic Sequences Explorer</h1>
 
     <div class="controls-container">
       <aside class="sidebar">
