--- a/widgets/quadratic-sequences/quadratic-differences.html
+++ b/widgets/quadratic-sequences/quadratic-differences.html
@@ -124,6 +124,9 @@
           <div class="control">
             <button id="btnRandom" class="widget-action-button">Random Sequence</button>
           </div>
+          <div class="control">
+            <button id="btnToggleMode" class="widget-action-button">Show Numbers</button>
+          </div>
         </div>
         <div class="info">
           <h3>Key Idea</h3>
