Updated Linear Sequences Widget
Added Show Numbers / Show General Form Button

--- a/widgets/linear-sequences/linear-sequences.html
+++ b/widgets/linear-sequences/linear-sequences.html
@@ -81,6 +81,9 @@
           <div class="control">
             <button id="btnRandom" class="widget-action-button">Random Sequence</button>
           </div>
+          <div class="control">
+            <button id="btnToggleMode" class="widget-action-button">Show Numbers</button>
+          </div>
         </div>
         <div class="info">
           <h3>Key Idea</h3>
