Updated Quadratic Sequences Widget
Can now click on the starting cell

--- a/widgets/quadratic-sequences/quadratic-differences.html
+++ b/widgets/quadratic-sequences/quadratic-differences.html
@@ -40,6 +40,7 @@
     .hl-d1 { background: #e6f7ff !important; box-shadow: inset 0 0 0 2px #00A3FF; }
     .hl-d2 { background: #e8ffe8 !important; box-shadow: inset 0 0 0 2px #00B800; }
     .hl-selected { background: #fff1a8 !important; box-shadow: inset 0 0 0 3px #000000; }
+    .hl-base { background: #fff1a8 !important; box-shadow: inset 0 0 0 3px #E60000; }
     .summary { margin-top: 0.5rem; color: #000000; }
     .summary strong { color: #000000; }
 
